--- a/css/agency.css
+++ b/css/agency.css
@@ -209,7 +209,10 @@ fieldset[disabled] .btn-xl.active {
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
     letter-spacing: 1px;
-    color: #fff;
+    text-shadow: 0px 2px 2px rgba(0,0,0,0.6),
+            0px 2px 2px rgba(0,0,0,0.1),
+            0px 2px 2px rgba(0,0,0,0.1);
+   color: #FFD800;
 }
 
 .navbar-default .nav li a:hover,
