--- a/css/agency.css
+++ b/css/agency.css
@@ -61,11 +61,11 @@ h6 {
 }
 
 .bg-light-gray {
-    background-color: #f7f7f7;
+    background-color: #E6E6FA;
 }
 
 .bg-darkest-gray {
-    background-color: #222;
+    background-color: #fff;
 }
 
 .btn-primary {
@@ -279,7 +279,7 @@ header {
 
 header .intro-text {
 
-    color: #8C489F;
+    color: #443266;
     padding-top: 100px;
     padding-bottom: 50px;
 }
@@ -657,8 +657,6 @@ aside.clients img {
 }
 
 section#contact {
-    background-color: #222;
-    background-image: url(../img/map-image.png);
     background-position: center;
     background-repeat: no-repeat;
 }
