Adding .gitignore: ignoring DS.Store files

--- a/css/agency.css
+++ b/css/agency.css
@@ -278,7 +278,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/shepard5.jpg);
+    background-image: url(../img/transparentshepard.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
