Adding new images, updating css and cover photo transparency

--- a/css/agency.css
+++ b/css/agency.css
@@ -279,7 +279,7 @@ header {
     text-align: center;
     color: #fff;
     background-attachment: scroll;
-    background-image: url(../img/transparentshepard.jpg);
+    background-image: url(../img/50percentshepard.jpg);
     background-position: center center;
     background-repeat: none;
     -webkit-background-size: cover;
