--- a/css/agency.css
+++ b/css/agency.css
@@ -72,6 +72,10 @@ h6 {
     background-image: url(../img/pixel_weave.png);
 }
 
+.bg-dark-photo {
+    background-image: url(../img/paper.png);
+}
+
 /* background color */
 .bg-photo {
     background-color: rgba(0,0,0,0.5);
