--- a/css/agency.css
+++ b/css/agency.css
@@ -73,7 +73,7 @@ h6 {
 }
 
 .bg-dark-photo {
-    background-image: url(../img/vichy.png);
+    background-image: url(../img/paper.png);
 }
 
 /* background color */
