--- a/css/agency.css
+++ b/css/agency.css
@@ -327,7 +327,7 @@ header .intro-text .intro-lead-in {
 }
 
 header .intro-text .intro-heading {
-    margin-bottom: 25px;
+    margin-bottom: 20px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 50px;
@@ -414,16 +414,16 @@ aside.clients img {
 }
 
 section#contact {
-    background-position: center;
-    background-repeat: no-repeat;
+    background-position: center; 
+    /*background-repeat: no-repeat; */
 }
 
 /*section#contact .section-heading {
-    color: #fff; */
-}
+    color: #fff; 
+} */
 
 section#contact .form-group {
-    margin-bottom: 25px;
+  margin-bottom: 25px; 
 }
 
 section#contact .form-group input,
