--- a/css/agency.css
+++ b/css/agency.css
@@ -307,10 +307,15 @@ header.transbox p{
     line-height: 22px;
     font-weight: bold;
 }
+/* Padding Logo */ 
+header .logo-photo {
+    padding-top: 150px
+}
+
 header .intro-text {
 
     color: #443266;
-    padding-top: 100px;
+    /*padding-top: 25px; */ /*300px*/
     padding-bottom: 50px;
 }
 
@@ -319,7 +324,7 @@ header .intro-text .intro-lead-in {
     margin-left: auto; 
     margin-right: auto;*/
 
-    margin-bottom: 25px;
+    /*margin-bottom: 25px; */
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 22px;
     font-style: italic;
@@ -327,7 +332,7 @@ header .intro-text .intro-lead-in {
 }
 
 header .intro-text .intro-heading {
-    margin-bottom: 20px;
+    /*margin-bottom: 10px; */
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 50px;
@@ -337,12 +342,12 @@ header .intro-text .intro-heading {
 
 @media(min-width:768px) {
     header .intro-text {
-        padding-top: 300px;
+      /*  padding-top: 50px; */ /* 100px */
         padding-bottom: 200px;
     }
 
     header .intro-text .intro-lead-in {
-        margin-bottom: 25px;
+        margin-bottom: 25px; 
         font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
         font-size: 40px;
         font-style: italic;
