--- a/css/agency.css
+++ b/css/agency.css
@@ -386,6 +386,14 @@ section h3.section-subheading {
     font-style: italic;
     font-weight: 400;
 }
+section h5.section-body{
+    margin-bottom: 75px;
+    text-transform: none;
+    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 16px;
+    font-style: italic;
+    font-weight: 400;
+}
 
 @media(min-width:768px) {
     section {
@@ -423,7 +431,7 @@ aside.clients img {
 }
 
 section#contact {
-    background-position: center; 
+    /*background-position: center; */ 
     /*background-repeat: no-repeat; */
 }
 
