--- a/css/style.css
+++ b/css/style.css
@@ -1107,15 +1107,28 @@ ul.social-buttons li a:active {
 
 ul.list-inline {
     margin-top: 0;
-    margin-bottom: 30px;
+    margin-bottom: 0;
 }
 
 /*--- footer ----*/
-.footer{
-	/*background: url(../images/darkscape.jpg) no-repeat 0px 0px;*/
-	background-size: 100% 100%;
-	padding: 3.2em 0;
+footer {
+    color: #fff;
 }
+
+footer h3 {
+    margin-bottom: 30px;
+}
+
+footer .footer-above {
+    padding-top: 50px;
+    background-color: #E6E6E6;
+}
+
+footer .footer-col {
+    margin-bottom: 50px;
+}
+
+
 p.copy-right{
 	color:#fff;
 	margin-top:1em;
